--- a/UrlShortener.Client/wwwroot/css/app.css
+++ b/UrlShortener.Client/wwwroot/css/app.css
@@ -172,13 +172,14 @@ code {
     background: linear-gradient(90deg, #0061ff, #6100ff);
     border: none;
     border-radius: 8px;
-    padding: 9px 0;
+    padding: 5px 0;
     font-weight: 600;
-    font-size: 0.9rem;
+    font-size: 1rem;
+    color: white;
+    gap: 3px;
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8px;
     transition: 0.3s;
 }
 
@@ -190,13 +191,14 @@ code {
     background: linear-gradient(90deg, #0061ff, #6100ff);
     border: none;
     border-radius: 8px;
-    padding: 5px 5px;
-    font-weight: 600;
-    font-size: .7rem;
+    padding: 5px 7px;
+    font-weight: 100;
+    font-size: .2rem;
     display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
-    gap: 8px;
+    gap: 7px;
     transition: 0.3s;
 }
 
@@ -244,6 +246,7 @@ code {
     padding: 10px;
     backdrop-filter: blur(8px);
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    gap: 5px;
 }
 
 .gap-2 {
